Fixes menu item alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,16 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   max-width: 80px;
 }
 
+.align-middle {
+  vertical-align: middle;
+}
+
+.fill-space {
+  /* This fills the remaining space, by using flexbox. 
+     Every toolbar row uses a flexbox row layout. */
+  flex: 1 1 auto;
+}
+
 #addExercise {
   margin-top: 4px;
   margin-left: 8px;
